--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ requests-html
 pyppeteer==1.0.2
 waybackpy
 pandas
+numpy==1.24.4
+spacy==3.5.4
+#Manually Install: python -m spacy download es_core_news_md
+#pyspark
+nltk
